@@ -1,3 +1,9 @@
+2022-07-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-trans.c (pkl_trans1_pr_comp_stmt): Merge common parts
+	under a single if statement.
+	(pkl_trans1_ps_comp_stmt): Likewise.
+
 2022-07-13  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-trans.h (struct pkl_trans_function_ctx): Define.
